added normalise CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <nav>
-        <img src=""C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Booki@3x.png"" alt="Logo">
-        <h5 id="Accommodation"> Accommodation </h5>
-        <h5 id="Activities"> Activities </h5>
+        <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Booki@3x.png" alt="Logo">
+        <a id="Accommodation" href="#"> Accommodation </a>
+        <a id="Activities" href="#"> Activities </a>
     </nav>
 
     <div> 
