--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
 <html lang="en">
 
 <head>
- <title> Booki </title>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <link rel="stylesheet" href="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\CSS\style.css">
- <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-    
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
+ <link rel="stylesheet" href="./CSS/style.css">
+ <title> Booki </title>
 </head>
 
 <body>
-    <nav>
-        <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Booki@3x.png" alt="Logo">
+    <div id="nav">
+       <div id="img">
+         <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Booki@3x.png" alt="Logo"> </div>
+       <div id="links">
         <a id="Accommodation" href="#"> Accommodation </a>
+        <br>
         <a id="Activities" href="#"> Activities </a>
-    </nav>
+        </div>
+    </div>
 
     <div> 
         <h2> 
