added CSS to NAV and added basic search bar to HTML

--- a/index.html
+++ b/index.html
@@ -14,24 +14,35 @@
  <title> Booki </title>
 </head>
 
-<body>
-    <div id="nav">
-       <div id="img">
-         <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Booki@3x.png" alt="Logo"> </div>
-       <div id="links">
-        <a id="Accommodation" href="#"> Accommodation </a>
-        <br>
-        <a id="Activities" href="#"> Activities </a>
+<header>
+    <div id="headdiv">
+       <div class="navbar" id="img">
+         <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
         </div>
+       
+        <nav id="links">
+            <a class="navbar" id="Accommodation" href="#"> Accommodation </a>
+            <a class="navbar" id="Activities" href="#"> Activities </a>
+        </nav>
     </div>
+</header>
 
-    <div> 
+<body>
+    <div id="text"> 
         <h2> 
             <strong> Find a place for your dream vacation </strong>
          </h2>
         <p id="One"> Downtown or in nature</p>
         
 
+    </div>
+
+    <div id="form">
+        <form>
+            <input type="Search" id="Search" name="Search" placeholder="Marisielle, France">
+            <label for="Search"></label>
+            <button id="Button" type="Submit"> Search </button></input>
+        </form>
     </div>
 
 </body>
