--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
 
     </div>
 
-    <div id="form">
+    <div id="searchform">
         <form>
-            <input type="Search" id="Search" name="Search" placeholder="Marisielle, France">
+            <input type="Search" id="search" name="Search" placeholder="Marseille, France">
             <label for="Search"></label>
             <button id="Button" type="Submit"> Search </button></input>
         </form>
     </div>
 
+    <div id="filters">
+        <P>Filters </P>
+        <ul>
+            <li>Low cost</li>
+            <li>Family-friendly</li>
+            <li>Romantic</li>
+            <li>Pets allowed</li>
+        </ul>
+    </div>
 </body>
