added font awesome icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-
+ <script src="https://kit.fontawesome.com/ab92fc5d1f.js" crossorigin="anonymous"></script>
  <link rel="stylesheet" href="./CSS/style.css">
  <title> Booki </title>
 </head>
@@ -48,10 +48,10 @@
     <div id="filters">
         <P>Filters </P>
         <ul>
-            <li>Low cost</li>
-            <li>Family-friendly</li>
-            <li>Romantic</li>
-            <li>Pets allowed</li>
+            <li id="l1"> <i class="fa-solid fa-money-bill-wave"></i> Low cost</li>
+            <li id="l2"> <i class="fa-solid fa-child-reaching"></i> Family-friendly</li>
+            <li id="l3"> <i class="fa-solid fa-heart"></i> Romantic</li>
+            <li id="l4"> <i class="fa-solid fa-dog"></i> Pets allowed</li>
         </ul>
     </div>
 </body>
