added CSS to search

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <div id="searchform">
         <form>
+            <i id="searchicon" class="fa-solid fa-location-dot"></i>
             <input type="Search" id="search" name="Search" placeholder="Marseille, France">
             <label for="Search"></label>
             <button id="Button" type="Submit"> Search </button></input>
@@ -46,7 +47,7 @@
     </div>
 
     <div id="filters">
-        <P>Filters </P>
+        <h4>Filters </h4>
         <ul>
             <li id="l1"> <i class="fa-solid fa-money-bill-wave"></i> Low cost</li>
             <li id="l2"> <i class="fa-solid fa-child-reaching"></i> Family-friendly</li>
