added images for acom, added info line, started HTML on acom div

--- a/index.html
+++ b/index.html
@@ -55,4 +55,32 @@
             <li id="l4"> <i class="fa-solid fa-dog"></i> Pets allowed</li>
         </ul>
     </div>
+
+    <div id="info"> 
+        <i id="infoicon" class="fa-solid fa-info"></i>
+        <p>More than 500 accommodations are available in this <br> city</p>
+    </div>
+
+    <div id ="acom">
+        <h2> 
+            <strong> Accommodation in Marseille</strong>
+        </h2>
+
+        <div id ="auberge la cannebiere">
+            <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
+            <p> <strong> Auberge La Cannebiere </strong></p>
+            <br>
+            <p>Nights starting at 25€</p>
+        </div>
+
+        <div id ="hotel du port"></div>
+        <div id ="les mouettes hotel"></div>
+        <div id ="hotel de la mer"></div>
+        <div id ="auberge la panier"></div>
+        <div id ="hotel chez amina"></div>
+
+        <h1>
+            <strong> Show more </strong>
+        </h1>
+    </div>
 </body>
