added hotel cards

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
     <div id="headdiv">
        <div class="navbar" id="img">
-         <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
+         <img id="Logo" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
         </div>
        
         <nav id="links">
@@ -61,23 +61,115 @@
         <p>More than 500 accommodations are available in this <br> city</p>
     </div>
 
+    
+
     <div id ="acom">
-        <h2> 
+        <h2 id="acomhead"> 
             <strong> Accommodation in Marseille</strong>
         </h2>
 
-        <div id ="auberge la cannebiere">
-            <img src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
-            <p> <strong> Auberge La Cannebiere </strong></p>
-            <br>
-            <p>Nights starting at 25€</p>
-        </div>
+        <br>
 
-        <div id ="hotel du port"></div>
-        <div id ="les mouettes hotel"></div>
-        <div id ="hotel de la mer"></div>
-        <div id ="auberge la panier"></div>
-        <div id ="hotel chez amina"></div>
+        <div id="hotelcards">
+
+         <div class="cards" id ="aubergelacannebiere">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
+
+           <div class="acominfo">
+             <p> <strong> Auberge La Cannebiere </strong></p>
+             <br>
+             <p>Nights starting at 25€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+            </div>
+         </div>
+
+         <div class="cards" id ="hotelduport">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port">
+
+            <div class="acominfo">
+             <p><strong>Hôtel du port</strong></p>
+             <br>
+             <p>Nights starting at 52€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+            </div>
+         </div>
+
+         <div class="cards" id ="lesmouetteshotel">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="les mouettes hotel">
+
+            <div class="acominfo">
+             <p><strong>Les mouettes Hotel</strong></p>
+             <br>
+             <p>Nights starting at 76€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+            </div>
+         </div>
+
+         <div class="cards" id ="hoteldelamer">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer">
+
+           <div class="acominfo">
+             <p><strong>Hôtel de la mer</strong></p>
+             <br>
+             <p>Nights starting at 46€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+           </div>
+         </div>
+
+         <div class="cards" id ="aubergelapanier">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier">
+
+            <div class="acominfo">
+             <p><strong>Auberge Le Panier</strong></p>
+             <br> 
+             <p>Nights starting at 23€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+            </div>
+         </div>
+
+         <div class="cards" id ="hotelchezamina">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina">
+
+            <div class="acominfo">
+             <p><strong>Hôtel chez Amina</strong></p>
+             <br>
+             <p>Nights starting at 96€</p>
+             <br>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+             <i class="fa-solid fa-star"></i>
+            </div>
+
+         </div>
+
+        </div>
 
         <h1>
             <strong> Show more </strong>
