added most popular

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <div id="filters">
         <h4>Filters </h4>
         <ul>
-            <li id="l1"> <i class="fa-solid fa-money-bill-wave"></i> Low cost</li>
-            <li id="l1"> <i class="fa-solid fa-child-reaching"></i> Family-friendly</li>
-            <li id="l1"> <i class="fa-solid fa-heart"></i> Romantic</li>
-            <li id="l1"> <i class="fa-solid fa-dog"></i> Pets allowed</li>
+            <li id="l1"> <i id="filticon" class="fa-solid fa-money-bill-wave"></i> Low cost</li>
+            <li id="l2"> <i id="filticon" class="fa-solid fa-child-reaching"></i> Family-friendly</li>
+            <li id="l3"> <i id="filticon" class="fa-solid fa-heart"></i> Romantic</li>
+            <li id="l4"> <i id="filticon" class="fa-solid fa-dog"></i> Pets allowed</li>
         </ul>
     </div>
 
@@ -174,5 +174,42 @@
         <h1>
             <strong> Show more </strong>
         </h1>
+    </div>
+
+    <div id="mostpopular">
+        <h5> Most Popular <i class="fa-solid fa-star"></i> </h5>
+
+        <div class="cards" id="morningsunhotel">
+           <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="morningsunhotel">
+           <h5> <strong> Morning Sun Hotel </strong></h5>
+           <p>Nights starting at <strong>128€</strong></p>
+           <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+        </div>
+
+        <div class="cards"  id="aucoeur">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Aucoeur">
+            <h5> <strong> Au cœur de l'eau Bed and Breakfast </strong> </h5>
+            <p>Nights starting at <strong>71€</strong></p>
+            <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+        </div>
+
+        <div class="cards" id="toutbleu">
+            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="toutbleu">
+            <h5><strong> Tout bleu et Blanc Hotel </strong></h5>
+            <p>Nights starting at <strong>68€</strong></p>
+            <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+             <i id="star" class="fa-solid fa-star"></i>
+        </div>
     </div>
 </body>
