final CSS of cards

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
-             <i id="star" class="fa-solid fa-star"></i>
+             <i id="starg" class="fa-solid fa-star"></i>
             </div>
          </div>
 
@@ -116,7 +116,7 @@
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
-             <i id="star" class="fa-solid fa-star"></i>
+             <i id="starg" class="fa-solid fa-star"></i>
             </div>
          </div>
 
@@ -131,8 +131,8 @@
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
              <i id="star" class="fa-solid fa-star"></i>
-             <i id="star" class="fa-solid fa-star"></i>
-             <i id="star" class="fa-solid fa-star"></i>
+             <i id="starg" class="fa-solid fa-star"></i>
+             <i id="starg" class="fa-solid fa-star"></i>
            </div>
          </div>
 
@@ -177,7 +177,7 @@
     </div>
 
     <div id="mostpopular">
-        <h5> Most Popular <i class="fa-solid fa-star"></i> </h5>
+        <h5> Most Popular <i id="starmp" class="fa-solid fa-star"></i> </h5>
 
         <div class="mpcards" id="morningsunhotel">
          <img class="hotelimgmp" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="morningsunhotel">
@@ -201,7 +201,7 @@
                 <i id="star" class="fa-solid fa-star"></i>
                 <i id="star" class="fa-solid fa-star"></i>
                 <i id="star" class="fa-solid fa-star"></i>
-                <i id="star" class="fa-solid fa-star"></i>
+                <i id="starg" class="fa-solid fa-star"></i>
             </div>
         </div>
   
@@ -214,7 +214,7 @@
                <i id="star" class="fa-solid fa-star"></i>
                <i id="star" class="fa-solid fa-star"></i>
                <i id="star" class="fa-solid fa-star"></i>
-               <i id="star" class="fa-solid fa-star"></i>
+               <i id="starg" class="fa-solid fa-star"></i>
             </div>
         </div>
 
