added activities and footer

--- a/index.html
+++ b/index.html
@@ -224,4 +224,75 @@
  
 </span>
 
+<dv id="act">
+
+    <h5> Activities in Marseille </h5>
+
+   <div id="actcards">
+
+     <div class="act" id="oldport">
+        <img id="actimg1" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Oldport">
+        <p>Old Port</p>
+     </div>
+
+     <div class="act" id ="Pome">
+        <img id="actimg4" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort">
+        <p>Pomègues Fort</p>
+     </div>
+
+     <div class="act" id ="frioul">
+        <img id="actimg3" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioulIsland">
+        <p> Frioul Island</p>
+     </div>
+
+     <div class="act" id ="Calan">
+        <img id="actimg1" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="CalanquesNationalPark">
+        <p>Calanques National Park</p>
+     </div>
+
+     <div class="act" id ="notre">
+        <img id="actimg2" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="NotreDameDeLaGarde">
+        <p>Notre-Dame-de-la-Garde</p>
+     </div>
+
+     <div class="act" id ="longch">
+        <img id="actimg2" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="LongchampPark">
+        <p>Longchamp Park</p>
+     </div>
+  
+    </div>
+
+</dv>
+
+<footer>
+
+    <div id="about">
+        <h5>About</h5>
+        <br>
+        <p>Site Map</p>
+        <br>
+        <p>General Terms and Conditions</p>
+        <br>
+        <p>Data and Privacy</p>
+    </div>
+
+    <div id="our">
+        <h5>Our Accommodations</h5>
+        <br>
+        <p>Quality Assessment</p>
+        <br>
+        <p>You have a hotel?</p>
+
+    </div>
+
+    <div id="assist">
+        <h5>Assistance</h5>
+        <br>
+        <p>Help Desk</p>
+        <br>
+        <p>Contact Us</p>
+       
+    </div>
+</footer>
+
 </body>
