added changes to CSS for images

--- a/index.html
+++ b/index.html
@@ -224,40 +224,40 @@
  
 </span>
 
-<dv id="act">
+<dv id="actcontainer">
 
     <h5> Activities in Marseille </h5>
 
-   <div id="actcards">
+   <div id="actcardscontainer">
 
-     <div class="act" id="oldport">
-        <img id="actimg1" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Oldport">
-        <p>Old Port</p>
+     <div class="size1" id="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Oldport">
+        <p id="txt">Old Port</p>
      </div>
 
-     <div class="act" id ="Pome">
-        <img id="actimg4" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort">
-        <p>Pomègues Fort</p>
+     <div class="size2" id ="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort">
+        <p id="txt">Pomègues Fort</p>
      </div>
 
-     <div class="act" id ="frioul">
-        <img id="actimg3" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioulIsland">
-        <p> Frioul Island</p>
+     <div class="size3" id ="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioulIsland">
+        <p id="txt"> Frioul Island</p>
      </div>
 
-     <div class="act" id ="Calan">
-        <img id="actimg1" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="CalanquesNationalPark">
-        <p>Calanques National Park</p>
+     <div class="size1" id ="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="CalanquesNationalPark">
+        <p id="txt">Calanques National Park</p>
      </div>
 
-     <div class="act" id ="notre">
-        <img id="actimg2" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="NotreDameDeLaGarde">
-        <p>Notre-Dame-de-la-Garde</p>
+     <div class="size4" id ="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="NotreDameDeLaGarde">
+        <p id="txt">Notre-Dame-de-la-Garde</p>
      </div>
 
-     <div class="act" id ="longch">
-        <img id="actimg2" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="LongchampPark">
-        <p>Longchamp Park</p>
+     <div class="size4" id ="act">
+        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="LongchampPark">
+        <p id="txt">Longchamp Park</p>
      </div>
   
     </div>
