commit after mentoring session

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
     <div id="headdiv">
-       <div class="navbar" id="img">
+       <div class="navbar" id="logoimg">
          <img id="Logo" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
         </div>
        
@@ -58,7 +58,7 @@
 
     <div id="info"> 
         <i id="infoicon" class="fa-solid fa-info"></i>
-        <p>More than 500 accommodations are available in this <br> city</p>
+        <p id="infotxt">More than 500 accommodations are available in this <br> city</p>
     </div>
 
  <span>
