added anchor links

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
        
         <nav id="links">
-            <a class="navbar" id="Accommodation" href="#"> Accommodation </a>
-            <a class="navbar" id="Activities" href="#"> Activities </a>
+            <a class="navbar" id="Accommodation" href="#acomhead"> Accommodation </a>
+            <a class="navbar" id="Activities" href="#actcontainer"> Activities </a>
         </nav>
     </div>
 </header>
