added media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
  <title> Booki </title>
 </head>
 
-<header>
+
+<body>
+ <header>
     <div id="headdiv">
        <div class="navbar" id="logoimg">
          <img id="Logo" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
@@ -25,9 +27,9 @@
             <a class="navbar" id="Activities" href="#actcontainer"> Activities </a>
         </nav>
     </div>
-</header>
+ </header>
 
-<body>
+
     <div id="text"> 
         <h2> 
             <strong> Find a place for your dream vacation </strong>
@@ -226,7 +228,7 @@
 
 <dv id="actcontainer">
 
-    <h5> Activities in Marseille </h5>
+    <h5 id="headm"> Activities in Marseille </h5>
 
    <div id="actcardscontainer">
 
