--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
 
 <footer>
 
-    <div id="about">
-        <h5>About</h5>
+    <div>
+        <h5 id="foot">About</h5>
         <br>
         <p>Site Map</p>
         <br>
@@ -278,8 +278,8 @@
         <p>Data and Privacy</p>
     </div>
 
-    <div id="our">
-        <h5>Our Accommodations</h5>
+    <div>
+        <h5 id="foot">Our Accommodations</h5>
         <br>
         <p>Quality Assessment</p>
         <br>
@@ -287,8 +287,8 @@
 
     </div>
 
-    <div id="assist">
-        <h5>Assistance</h5>
+    <div>
+        <h5 id="foot">Assistance</h5>
         <br>
         <p>Help Desk</p>
         <br>
