added further media queries: icon, background color etc

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <div id="searchform">
         <form>
-            <i id="searchicon" class="fa-solid fa-location-dot"></i>
+            <i id="searchbutton" class="fa-solid fa-location-dot"></i>
             <input type="Search" id="search" name="Search" placeholder="Marseille, France">
             <label for="Search"></label>
-            <button id="Button" type="Submit"> Search </button></input>
+            <button id="Button" type="Submit"> <p id="searchtxt">Search</p> <i id="searchicon" class="fa-solid fa-magnifying-glass"></i> </button></input>
         </form>
     </div>
 
