--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
 
         <h5>
-            <strong> Show more </strong>
+            <strong id="show"> Show more </strong>
         </h5>
     </div>
 
