added images relatively, fixed margin/padding, centered filters text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <header>
     <div id="headdiv">
        <div class="navbar" id="logoimg">
-         <img id="Logo" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\Bookiresized.png" alt="Logo">
+         <img id="Logo" src="assets/Bookiresized.png" alt="Logo">
         </div>
        
         <nav id="links">
@@ -75,7 +75,7 @@
         <div id="hotelcards">
 
          <div class="cards" id ="aubergelacannebiere">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
+            <img class="hotelimg" src="assets/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
 
            <div class="acominfo">
              <p> <strong> Auberge La Cannebiere </strong></p>
@@ -91,7 +91,7 @@
          </div>
 
          <div class="cards" id ="hotelduport">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port">
+            <img class="hotelimg" src="assets/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port">
 
             <div class="acominfo">
              <p><strong>Hôtel du port</strong></p>
@@ -107,7 +107,7 @@
          </div>
 
          <div class="cards" id ="lesmouetteshotel">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="les mouettes hotel">
+            <img class="hotelimg" src="assets/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="les mouettes hotel">
 
             <div class="acominfo">
              <p><strong>Les mouettes Hotel</strong></p>
@@ -123,7 +123,7 @@
          </div>
 
          <div class="cards" id ="hoteldelamer">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer">
+            <img class="hotelimg" src="assets/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer">
 
            <div class="acominfo">
              <p><strong>Hôtel de la mer</strong></p>
@@ -139,7 +139,7 @@
          </div>
 
          <div class="cards" id ="aubergelapanier">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier">
+            <img class="hotelimg" src="assets/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier">
 
             <div class="acominfo">
              <p><strong>Auberge Le Panier</strong></p>
@@ -155,7 +155,7 @@
          </div>
 
          <div class="cards" id ="hotelchezamina">
-            <img class="hotelimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina">
+            <img class="hotelimg" src="assets/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina">
 
             <div class="acominfo">
              <p><strong>Hôtel chez Amina</strong></p>
@@ -182,7 +182,7 @@
         <h5> Most Popular <i id="starmp" class="fa-solid fa-star"></i> </h5>
 
         <div class="mpcards" id="morningsunhotel">
-         <img class="hotelimgmp" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="morningsunhotel">
+         <img class="hotelimgmp" src="assets/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="morningsunhotel">
            <div class="mpinfo">
              <h5> <strong> Morning Sun Hotel </strong></h5>
              <p>Nights starting at <strong>128€</strong></p>
@@ -195,7 +195,7 @@
         </div>
 
         <div class="mpcards"  id="aucoeur">
-           <img class="hotelimgmp" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Aucoeur">
+           <img class="hotelimgmp" src="assets/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Aucoeur">
             <div class="mpinfo">
                 <h5> <strong> Au cœur de l'eau Bed and Breakfast </strong> </h5>
                 <p>Nights starting at <strong>71€</strong></p>
@@ -208,7 +208,7 @@
         </div>
   
         <div class="mpcards" id="toutbleu">
-          <img class="hotelimgmp" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="toutbleu">
+          <img class="hotelimgmp" src="assets/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="toutbleu">
             <div class="mpinfo">
                <h5><strong> Tout bleu et Blanc Hotel </strong></h5>
                <p>Nights starting at <strong>68€</strong></p>
@@ -233,32 +233,32 @@
    <div id="actcardscontainer">
 
      <div class="size1" id="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Oldport">
+        <img id="actimg" src="assets/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Oldport">
         <p id="txt">Old Port</p>
      </div>
 
      <div class="size2" id ="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort">
+        <img id="actimg" src="assets/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Pomegues Fort">
         <p id="txt">Pomègues Fort</p>
      </div>
 
      <div class="size3" id ="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioulIsland">
+        <img id="actimg" src="assets/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioulIsland">
         <p id="txt"> Frioul Island</p>
      </div>
 
      <div class="size1" id ="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="CalanquesNationalPark">
+        <img id="actimg" src="assets/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="CalanquesNationalPark">
         <p id="txt">Calanques National Park</p>
      </div>
 
      <div class="size4" id ="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="NotreDameDeLaGarde">
+        <img id="actimg" src="assets/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="NotreDameDeLaGarde">
         <p id="txt">Notre-Dame-de-la-Garde</p>
      </div>
 
      <div class="size4" id ="act">
-        <img id="actimg" src="C:\Users\Holly\OneDrive\Desktop\Web development\ProjectTwo\ProjectTwo\assets\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="LongchampPark">
+        <img id="actimg" src="assets/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="LongchampPark">
         <p id="txt">Longchamp Park</p>
      </div>
   
@@ -268,7 +268,7 @@
 
 <footer>
 
-    <div>
+    <div id="footerdiv">
         <h5 id="foot">About</h5>
         <br>
         <p>Site Map</p>
@@ -278,7 +278,7 @@
         <p>Data and Privacy</p>
     </div>
 
-    <div>
+    <div id="footerdiv">
         <h5 id="foot">Our Accommodations</h5>
         <br>
         <p>Quality Assessment</p>
@@ -287,7 +287,7 @@
 
     </div>
 
-    <div>
+    <div id="footerdiv">
         <h5 id="foot">Assistance</h5>
         <br>
         <p>Help Desk</p>
