changed width to %

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <div id="filters">
         <h4>Filters </h4>
         <ul>
-            <li id="l1"> <i  class="fa-solid fa-money-bill-wave"></i> Low cost</li>
-            <li id="l2"> <i  class="fa-solid fa-child-reaching"></i> Family-friendly</li>
-            <li id="l3"> <i  class="fa-solid fa-heart"></i> Romantic</li>
-            <li id="l4"> <i  class="fa-solid fa-dog"></i> Pets allowed</li>
+            <li id="l1"> <i id="i1" class="fa-solid fa-money-bill-wave"></i> Low cost</li>
+            <li id="l2"> <i id="i2" class="fa-solid fa-child-reaching"></i> Family-friendly</li>
+            <li id="l3"> <i id="i3" class="fa-solid fa-heart"></i> Romantic</li>
+            <li id="l4"> <i id="i4" class="fa-solid fa-dog"></i> Pets allowed</li>
         </ul>
     </div>
 
