--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <img class="hotelimg" src="assets/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge la cannebiere">
 
               <div class="acominfo">
-                 <p> <strong> Auberge La Cannebiere </strong></p>
+                 <p class="hotelname"> <strong> Auberge La Cannebiere </strong></p>
                  <p>Nights starting at 25€</p>
                  <i id="star1" class="fa-solid fa-star"></i>
                  <i id="star2" class="fa-solid fa-star"></i>
@@ -91,7 +91,7 @@
              <img class="hotelimg" src="assets/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotel du port">
 
              <div class="acominfo">
-                 <p><strong>Hôtel du port</strong></p>
+                 <p class="hotelname"><strong>Hôtel du port</strong></p>
                  <p>Nights starting at 52€</p>
                  <i id="star6" class="fa-solid fa-star"></i>
                  <i id="star7" class="fa-solid fa-star"></i>
@@ -105,7 +105,7 @@
              <img class="hotelimg" src="assets/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="les mouettes hotel">
 
               <div class="acominfo">
-                <p><strong>Les mouettes Hotel</strong></p>
+                <p class="hotelname"><strong>Les mouettes Hotel</strong></p>
                 <p>Nights starting at 76€</p>
                 <i id="star11" class="fa-solid fa-star"></i>
                 <i id="star12" class="fa-solid fa-star"></i>
@@ -119,7 +119,7 @@
                <img class="hotelimg" src="assets/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel de la mer">
 
               <div class="acominfo">
-                 <p><strong>Hôtel de la mer</strong></p>
+                 <p class="hotelname"><strong>Hôtel de la mer</strong></p>
                  <p>Nights starting at 46€</p>
                  <i id="star16" class="fa-solid fa-star"></i>
                  <i id="star17" class="fa-solid fa-star"></i>
@@ -133,7 +133,7 @@
               <img class="hotelimg" src="assets/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge le panier">
 
                <div class="acominfo">
-                 <p><strong>Auberge Le Panier</strong></p>
+                 <p class="hotelname"><strong>Auberge Le Panier</strong></p>
                  <p>Nights starting at 23€</p>
                  <i id="star21" class="fa-solid fa-star"></i>
                  <i id="star22" class="fa-solid fa-star"></i>
@@ -147,7 +147,7 @@
               <img class="hotelimg" src="assets/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel chez amina">
 
               <div class="acominfo">
-                 <p><strong>Hôtel chez Amina</strong></p>
+                 <p class="hotelname"><strong>Hôtel chez Amina</strong></p>
                  <p>Nights starting at 96€</p>
                  <i id="star26" class="fa-solid fa-star"></i>
                  <i id="star27" class="fa-solid fa-star"></i>
