--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <i id="searchbutton" class="fa-solid fa-location-dot"></i>
             <input type="Search" id="search" name="Search" placeholder="Marseille, France">
             <label for="search"></label>
-            <button id="Button" type="Submit"> Search <i id="searchicon" class="fa-solid fa-magnifying-glass"></i> </button>
+            <button id="Button" type="Submit"> <p id="searchtxt"> Search</p> <i id="searchicon" class="fa-solid fa-magnifying-glass"></i>  </button>
+            
         </form>
     </div>
 
